@@ -3,10 +3,8 @@ use warnings;
 use Test::More;
 
 my $git;
-if (
-    -d '.git'
-    and
-    eval { $git = `git ls-tree --name-status -r HEAD | egrep -v '^\.git'` }
+if ( -d '.git'
+    and eval { $git = `git ls-tree --name-status -r HEAD | egrep -v '^\.git'` }
   )
 {
     plan( tests => 1 );
